# StructaMed

./: .gitattributes  .gitignore  Cargo.toml  README.md
docs/: docs.html  download.html  index.html  pricing.html  style.css  try.html
docs/pkg/: clinote_wasm.d.ts  clinote_wasm.js  clinote_wasm_bg.wasm  clinote_wasm_bg.wasm.d.ts
scripts/: build_wasm_web.sh  smoke.sh
src/: cli.rs  lib.rs  selftest.rs  util.rs
tests/: selftest_tests.rs
tests/fixtures/clean/discharge/: discharge_ok.txt
tests/fixtures/clean/hp/: hp_ok.txt
tests/fixtures/clean/soap/: soap_ok.txt
wasm/clinote_wasm/: Cargo.toml
wasm/clinote_wasm/src/: lib.rs
wasm/clinote_wasm/web/: wasm-test.html
