[package]
name = "clinote"
version = "0.1.1"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:inquire"]

[[bin]]
name = "clinote"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
glob = "0.3"
inquire = { version = "0.6", optional = true }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
